# rendoor-platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
apps/api/routes/: core.py
apps/web/: app.py
apps/worker/: __init__.py  app.py  schedules.py
core/adapters/: __init__.py
core/adapters/etl/: __init__.py  domria_pipeline.py
core/adapters/loaders/: __init__.py  database.py
core/adapters/normalizers/: __init__.py  domria.py
core/adapters/providers/: __init__.py  domria.py
core/config/: __init__.py
core/domain/: __init__.py
core/domain/core/: __init__.py  listing.py  owner.py
core/domain/ingest/: __init__.py  http.py  raw_listing.py
core/domain/listing/: __init__.py  listing.py  owner.py  service.py  value.py
core/domain/user/: __init__.py  filter.py
core/domain/value/: __init__.py
core/infra/db/: __init__.py  context.py
core/infra/http/: builder.py  client.py
core/infra/migrations/: env.py
core/infra/models/: __init__.py
core/ports/: __init__.py  etl.py  loader.py  normalizer.py  provider.py
core/ports/infra/: __init__.py  http.py
migration/: env.py
ops/: .gitignore  docker-compose.yml
ops/docker/: api.Dockerfile  bot.Dockerfile  web.Dockerfile  worker.Dockerfile
scripts/: run_ingest.py
src/core/: __init__.py  logger.py
src/core/config/: __init__.py
src/ingest/: client.py  interfaces.py  transport.py  types.py
src/scheduler/: __init__.py  app_celery.py
src/storage/: __init__.py
src/web/: __init__.py  app.py
ui/bot/: __init__.py  bot.py
(+30 files in other folders)
