[project]
name = "rendoor"
version = "0.1.0"
description = ""
authors = [
    { name = "Dugd_Nitkin", email = "dugd.nitkin@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "curl-cffi (>=0.13.0,<0.14.0)",
    "flower (>=2.0.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.9.0,<3.13.0)",
    "aiogram (>=3.22.0,<4.0.0)",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
celery-types = "^0.23.0"
ruff = "^0.14.0"
faker = "^37.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "B",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools,migration,artifacts}/*" = ["E402"]